--- a/twittersim.html
+++ b/twittersim.html
@@ -218,7 +218,7 @@ It’s just for fun, so enjoy experimenting and seeing what takes off! 🚀
   </div>
 
   <!-- Sound effect -->
-  <audio src="/success-1-6297.mp3" id="audiof"></audio>
+  <audio src="success-1-6297.mp3" id="audiof"></audio>
     <audio src="error-10-206498.mp3" id="audior"></audio>
     <span id=" " style="color: greenyellow;"></span>
 </body>
